@@ -34,7 +34,7 @@ Rcpp-introduction.pdf: Rcpp-introduction.Rnw
 Rcpp-modules.pdf: Rcpp-modules/Rcpp-modules.Rnw
 	rm Rcpp-modules.Rnw 
 	cp -f Rcpp-modules/Rcpp-modules.Rnw .
-	Rscript -e "require(highlight); driver <- HighlightWeaveLatex(boxes = TRUE); Sweave( 'Rcpp-modules.Rnw', driver = driver ); "
+	Rscript -e "require(highlight); driver <- HighlightWeaveLatex(boxes = TRUE, bg = 'white' ); Sweave( 'Rcpp-modules.Rnw', driver = driver ); "
 	Rscript -e "tools::texi2dvi( 'Rcpp-modules.tex', pdf = TRUE, clean = FALSE )"
 	bibtex Rcpp-modules
 	Rscript -e "tools::texi2dvi( 'Rcpp-modules.tex', pdf = TRUE, clean = TRUE )"
